* BorderlessEntry.cs: fixing ticket details
* App.xaml:
* App.xaml.cs:
* User.cs:
* Tenant.cs:
* CustomEntry.cs:
* Categories.cs:
* LoginPage.xaml:
* CamRecorder.cs:
* LocalAuthHelper.cs:
* DataAccess.cs:
* TicketDetails.cs:
* ManageGo.iOS.csproj:
* BorderlessEditor.cs:
* MasterMenuPage.xaml:
* NestedListView.cs:
* WelcomePage.xaml.cs:
* NestedListView.cs:
* LocalAuthHelper.cs:
* DrawableControlView.cs:
* MaintenanceTicket.cs:
* TicketDetailsPage.xaml:
* BorderlessEditor.cs:
* LoginPageModel.cs:
* SimpleAuthCallbacks.cs:
* SelectableLabelRenderer.cs:
* DrawableControlView.cs:
* TicketDetailsPage.xaml.cs:
* ManageGo.Android.csproj:
* EditTicketDetailsView.xaml:
* CameraCaptureListener.cs:
* MasterMenuPageModel.cs:
* TicketFilterSelectView.xaml:
* MaintenanceTicketsPage.xaml:
* SelectableLabelRenderer.cs:
* EditTicketDetailsView.xaml.cs:
* icon.png:
* colors.xml:
* styles.xml:
* TicketDetailsPageModel.cs:
* AndroidManifest.xml:
* Resource.designer.cs:
* MaintenanceTicketsPageModel.cs:
* fingerprint.png:
* icon.png:
* splash_screen.xml:
* Icon76.png:
* Icon80.png:
* Icon40.png:
* Icon58.png:
* Icon60.png:
* logo_simple.png:
* Icon87.png:
* Icon180.png:
* icon_87.png:
* icon_80.png:
* icon_76.png:
* icon_60.png:
* icon_58.png:
* icon_40.png:
* logo_simple.png:
* Icon152.png:
* Icon167.png:
* icon_180.png:
* Icon1024.png:
* icon_167.png:
* icon_152.png:
* Contents.json:
* radio_selected.png:
* radio_unselected.png:
* app_icon_1024-01.png:

--- a/ManageGo/App.xaml
+++ b/ManageGo/App.xaml
@@ -11,7 +11,7 @@
             <Color x:Key="Grey-Mid-2">#949494</Color>
             <Color x:Key="Grey-Dark-1">#323232</Color>
             <Color x:Key="Off-White">#F9FAFB</Color>
-
+            <Color x:Key="Yellow">#e0a031</Color>
             <Color x:Key="Green">#55C433</Color>
             <Color x:Key="Red">#E13D40</Color>
             <Style x:Key="Regular-Text" TargetType="Label">
