--- a/ManageGo/Views/TicketDetailsPage.xaml
+++ b/ManageGo/Views/TicketDetailsPage.xaml
@@ -34,7 +34,7 @@
             <Image Source="logo.png" Margin="-32,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
         </StackLayout>
         <StackLayout x:Name="TopDetailsView" IsVisible="{Binding ReplyBoxIsVisible,Converter= {StaticResource InverseBoolConverter}}" Spacing="0" Grid.Row="1" Margin="0,0,0,12" >
-            <Label  Text="{Binding TicketTitle}" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Large" HorizontalTextAlignment="Center"/>
+            <Label Text="{Binding TicketTitle}" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Large" HorizontalTextAlignment="Center"/>
              <BoxView HeightRequest="1" BackgroundColor="#85bafa"/>
             <Grid VerticalOptions="FillAndExpand" BackgroundColor="#f8f9fa" MinimumHeightRequest="50" HeightRequest="50">
                 <Grid.RowDefinitions>
@@ -51,12 +51,10 @@
                 </StackLayout>
                 <BoxView Grid.Row="0" VerticalOptions="CenterAndExpand" Grid.Column="1" BackgroundColor="#ebebeb" WidthRequest="1" HorizontalOptions="FillAndExpand" />
                 <StackLayout Grid.Row="0" Grid.Column="2" HorizontalOptions="CenterAndExpand" Spacing="0" Orientation="Horizontal">
-                    <Button BackgroundColor="Transparent" VerticalOptions="CenterAndExpand" TextColor="Black" FontSize="Small" Image="star_blue.png" Text="Ticket details"  />
-                    <Label Text="{Binding NumberOfAppliedFilters}" HorizontalOptions="StartAndExpand" FontSize="Small" Margin="-3,8,0,0" TextColor="#318bfa"/>
+                    <Button Text="Ticket details" Command="{Binding OnshowDetailsTapped}" BackgroundColor="Transparent" VerticalOptions="CenterAndExpand" TextColor="Black" FontSize="Small" Image="star_blue.png"   />
                 </StackLayout>
             </Grid>
             <BoxView BackgroundColor="#ebebeb" HeightRequest="1"/>
-            <ContentView BackgroundColor="White" Content="{Binding PopContentView}" VerticalOptions="StartAndExpand"/>
             <StackLayout Orientation="Horizontal" Padding="18,8,18,0">
                 <Image Source="chat_lg.png" VerticalOptions="Center"/>
                 <Label Text="{Binding TicketTitleText}" HorizontalOptions="FillAndExpand" FontAttributes="Bold" Margin="8,0,0,0" LineBreakMode="TailTruncation" VerticalOptions="CenterAndExpand" />
@@ -65,6 +63,8 @@
                 <Image Source="wrench_blue.png" IsVisible="{Binding HasWorkOrder}" HorizontalOptions="End"/>
                 <Image Source="calendar_blue_sm.png" IsVisible="{Binding HasEvent}" HorizontalOptions="End"/>
             </StackLayout>
+            <ContentView BackgroundColor="White" Content="{Binding PopContentView}" VerticalOptions="StartAndExpand"/>
+
         </StackLayout>
         <StackLayout Grid.Row="2" BackgroundColor="#f8f9fa" Spacing="0">
             <ListView ItemsSource="{Binding Comments}" ItemAppearing="Handle_ItemAppearing"  x:Name="MyListView" CachingStrategy="RetainElement" VerticalOptions="StartAndExpand" IsPullToRefreshEnabled="false" SelectionMode="None" IsEnabled="{Binding ListIsEnabled}" HasUnevenRows="true"  BackgroundColor="White" SeparatorVisibility="None" >
@@ -81,34 +81,30 @@
                                 <Frame HorizontalOptions="FillAndExpand" VerticalOptions="Start" x:Name="FrameContainer"  Padding="{Binding BubblePadding}" Margin="9,0,18,0" BackgroundColor="{Binding BubbleBackgroundColor}" HasShadow="false">
                                     <StackLayout  WidthRequest="{Binding pageWidth, Source={x:Reference ThisPage}}"  HorizontalOptions="Fill"  Margin="6,14,0,14">
                                             <Label Margin="0,0,0,8" FormattedText="{Binding FirstLineText}" VerticalTextAlignment="Center" LineBreakMode="MiddleTruncation" />
-                                            <controls:SelectableLabel  BackgroundColor="Transparent" Text="{Binding SecondLineText}"  TextColor="#58595b" FontSize="Medium" />
+                                            <controls:SelectableLabel  WidthRequest="{Binding PermittedEditorWidth,Source={x:Reference ThisPage}}" HorizontalOptions="Start"  BackgroundColor="Transparent" Text="{Binding SecondLineText}"  TextColor="#58595b" FontSize="Medium" />
                                             <StackLayout Margin="0,0,0,16" Orientation="Horizontal">
                                                 <Image Source="pet_blue.png" IsVisible="{Binding HasPet}" VerticalOptions="StartAndExpand" Margin="0,2,12,0" />
-                                                <controls:SelectableLabel HorizontalOptions="Start" Text="{Binding AccessNote}" BackgroundColor="Transparent" TextColor="#58595b" FontSize="Medium" />
+                                                <controls:SelectableLabel WidthRequest="{Binding PermittedEditorWidth,Source={x:Reference ThisPage}}" HorizontalOptions="Start" Text="{Binding AccessNote}" BackgroundColor="Transparent" TextColor="#58595b" FontSize="Medium" />
                                             </StackLayout>
-                                             <ListView ItemsSource="{Binding Files}" SelectionMode="None" VerticalOptions="Start" BackgroundColor="Transparent" Margin="8" IsVisible="{Binding HasFiles}" SeparatorVisibility="None" HeightRequest="55">
+                                             <controls:NestedListView ItemsSource="{Binding Files}" SelectionMode="None" VerticalOptions="Start" BackgroundColor="Transparent" Margin="8" IsVisible="{Binding HasFiles}" SeparatorVisibility="None" HeightRequest="55">
                                                  <ListView.ItemTemplate>
                                                     <DataTemplate>
                                                         <ViewCell>
                                                                 <Frame HasShadow="false" Margin="0,0,0,8" BackgroundColor="#f9fafb" Padding="4">
                                                                     <StackLayout Orientation="Horizontal">
-                                                                        
                                                                         <Label Text="{Binding Name}" TextColor="#2f88f6" LineBreakMode="TailTruncation">
                                                                      <Label.GestureRecognizers>
                                                                         <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.OnAttachedFileTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}"/>
                                                                     </Label.GestureRecognizers>
                                                                             </Label>
                                                                     </StackLayout>
-                                                                   
                                                                 </Frame>
                                                         </ViewCell>
                                                     </DataTemplate>
                                                 </ListView.ItemTemplate>
-                                            </ListView>
+                                            </controls:NestedListView>
                                     </StackLayout>
-                                            
                                 </Frame>
-                                   
                                     <Label Text="Internal" IsVisible="{Binding InternalLabelIsVisible}" FontSize="Small" Margin="9,9,0,0" TextColor="{Binding SideLineColor}" />
                                     <BoxView HeightRequest="1" Opacity="0.25"  Margin="9,9,18,18" HorizontalOptions="FillAndExpand" BackgroundColor="#808285" />
                                 </StackLayout>
@@ -122,6 +118,7 @@
         
             
         <!-- Event action sheet -->
+            <!-- IsVisible="{Binding EventActionSheetIsVisible}" -->
         <Grid Grid.Row="2" IsVisible="{Binding EventActionSheetIsVisible}" Grid.RowSpan="2" RowSpacing="0" BackgroundColor="White">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
@@ -134,7 +131,7 @@
             <ScrollView Grid.Row="2" x:Name="EventContainerScrollView" Padding="28,0,28,0" Margin="6,-15,0,0" Scrolled="Handle_Scrolled" >
                 <StackLayout Spacing="0">
                     <Label Text="Event summary:" Margin="0,0,0,4" TextColor="#5d5e60" FontAttributes="Bold" VerticalOptions="Start" VerticalTextAlignment="Start" />
-                    <Editor Placeholder="type here..." FontSize="Small" Margin="0,0,0,4" Text="{Binding EventSummary}" />
+                    <controls:BorderlessEditor Placeholder="type here..." FontSize="Small" Margin="0,0,0,4" Text="{Binding EventSummary}" />
                     <BoxView HeightRequest="0.75" BackgroundColor="Gray" Opacity="0.75" Margin="0,8,12,6"/>
                     <Label Text="Event date:" Margin="0,0,0,4" TextColor="#5d5e60" FontAttributes="Bold" VerticalOptions="Start" VerticalTextAlignment="Start" />
                     <Label Text="{Binding SelectedEventDateString}" Margin="4,0,0,8" FontSize="Small" TextColor="#5d5e60" >
@@ -180,7 +177,7 @@
                     </Grid>
                     <BoxView x:Name="BottomOfClock" HeightRequest="0.75" BackgroundColor="Gray" Opacity="0.75" Margin="0,8,12,6"/>
                     <Label Text="Send to users:" Margin="0,8,0,0" TextColor="#5d5e60" FontAttributes="Bold" VerticalOptions="Start" VerticalTextAlignment="Start" />
-                    <ListView SeparatorVisibility="None" SelectionMode="None" ItemsSource="{Binding Users}" HeightRequest="75" VerticalOptions="Start">
+                    <controls:NestedListView SeparatorVisibility="None" SelectionMode="None" ItemsSource="{Binding Users}" HeightRequest="75" VerticalOptions="Start">
                       <ListView.ItemTemplate>
                             <DataTemplate>
                                 <ViewCell>
@@ -194,9 +191,9 @@
                                 </ViewCell>
                             </DataTemplate>
                         </ListView.ItemTemplate>
-                    </ListView>
+                    </controls:NestedListView>
                     <Label Text="External contacts" Margin="0,8,0,0" FontSize="Small" TextColor="#5d5e60"  VerticalOptions="Start" VerticalTextAlignment="Start" />
-                    <ListView SeparatorVisibility="None" SelectionMode="None" ItemsSource="{Binding ExternalContacts}" HeightRequest="75" VerticalOptions="Start">
+                    <controls:NestedListView SeparatorVisibility="None" SelectionMode="None" ItemsSource="{Binding ExternalContacts}" HeightRequest="75" VerticalOptions="Start">
                       <ListView.ItemTemplate>
                             <DataTemplate>
                                 <ViewCell>
@@ -210,10 +207,11 @@
                                 </ViewCell>
                             </DataTemplate>
                         </ListView.ItemTemplate>
-                    </ListView>
+                    </controls:NestedListView>
+                    <Button Grid.Row="3" Command="{Binding OnSendEventButtonTapped}" BorderRadius="8" Margin="28,0,28,8" Text="Create event" FontSize="Medium" TextColor="White" BackgroundColor="#59c623"/>
+
                 </StackLayout>
             </ScrollView>
-            <Button Grid.Row="3" Command="{Binding OnSendEventButtonTapped}" BorderRadius="8" Margin="28,0,28,8" Text="Create event" FontSize="Large" TextColor="White" BackgroundColor="#59c623"/>
 
         </Grid> 
             
@@ -232,13 +230,13 @@
             <ScrollView Grid.Row="2" Padding="28,0,28,0" Margin="6,-15,0,0" Scrolled="Handle_Scrolled" >
                 <StackLayout Spacing="0">
                     <Label Text="Work order summary:" Margin="0,0,0,4" TextColor="#5d5e60" FontAttributes="Bold" VerticalOptions="Start" VerticalTextAlignment="Start" />
-                    <Editor Placeholder="type here..." Margin="0,0,0,4" Text="{Binding WorkOrderSummary}" />
+                    <controls:BorderlessEditor Placeholder="type here..." Margin="0,0,0,4" Text="{Binding WorkOrderSummary}" />
                     <BoxView HeightRequest="0.75" BackgroundColor="Gray" Opacity="0.75" Margin="0,8,12,6"/>
                     <Label Text="Details:" Margin="0,0,0,4" TextColor="#5d5e60" FontAttributes="Bold" VerticalOptions="Start" VerticalTextAlignment="Start" />
-                    <Editor Placeholder="type here..." Text="{Binding WorkOrderDetail}" />
+                    <controls:BorderlessEditor Placeholder="type here..." Text="{Binding WorkOrderDetail}" />
                     <BoxView HeightRequest="0.75" BackgroundColor="Gray" Opacity="0.75" Margin="0,8,12,6"/>
                     <Label Text="Send to users:" Margin="0,8,0,0" TextColor="#5d5e60" FontAttributes="Bold" VerticalOptions="Start" VerticalTextAlignment="Start" />
-                    <ListView SeparatorVisibility="None" SelectionMode="None" ItemsSource="{Binding Users}" HeightRequest="75" VerticalOptions="Start">
+                    <controls:NestedListView SeparatorVisibility="None" SelectionMode="None" ItemsSource="{Binding Users}" HeightRequest="75" VerticalOptions="Start">
                       <ListView.ItemTemplate>
                             <DataTemplate>
                                 <ViewCell>
@@ -252,7 +250,7 @@
                                 </ViewCell>
                             </DataTemplate>
                         </ListView.ItemTemplate>
-                    </ListView>
+                    </controls:NestedListView>
                     <Label Text="External contacts" Margin="0,8,0,0" FontSize="Small" TextColor="#5d5e60"  VerticalOptions="Start" VerticalTextAlignment="Start" />
                     <ListView SeparatorVisibility="None" SelectionMode="None" ItemsSource="{Binding ExternalContacts}" HeightRequest="75" VerticalOptions="Start">
                       <ListView.ItemTemplate>
@@ -269,9 +267,10 @@
                             </DataTemplate>
                         </ListView.ItemTemplate>
                     </ListView>
+                    <Button Grid.Row="3" Command="{Binding OnSendWorkOrderButtonTapped}" BorderRadius="8" Margin="28,0,28,8" Text="Create work order" FontSize="Large" TextColor="White" BackgroundColor="#59c623"/>
+
                 </StackLayout>
             </ScrollView>
-            <Button Grid.Row="3" Command="{Binding OnSendWorkOrderButtonTapped}" BorderRadius="8" Margin="28,0,28,8" Text="Create work order" FontSize="Large" TextColor="White" BackgroundColor="#59c623"/>
 
         </Grid>  
         
@@ -290,8 +289,8 @@
                                 <RowDefinition Height="*" />
                                 <RowDefinition Height="auto" />
                             </Grid.RowDefinitions>
-                           <Editor x:Name="ReplyEditor" Grid.Row="0"  Text="{Binding ReplyTextBody}"  Keyboard="Text" AutoSize="TextChanges"  Focused="Handle_Focused" Unfocused="Handle_Unfocused" Placeholder="Type your reply..." VerticalOptions="StartAndExpand" />
-                            <ListView Grid.Row="1" SelectionMode="None" RowHeight="25" HeightRequest="43" SeparatorVisibility="None" ItemsSource="{Binding CurrentReplyAttachments}" >
+                           <controls:BorderlessEditor  x:Name="ReplyEditor" Grid.Row="0"  Text="{Binding ReplyTextBody}"  Keyboard="Text" AutoSize="TextChanges"  Focused="Handle_Focused" Unfocused="Handle_Unfocused" Placeholder="Type your reply..." VerticalOptions="StartAndExpand" />
+                            <controls:NestedListView Grid.Row="1" SelectionMode="None" RowHeight="25" HeightRequest="43" SeparatorVisibility="None" ItemsSource="{Binding CurrentReplyAttachments}" >
                                 <ListView.ItemTemplate>
                                     <DataTemplate>     
                                         <ViewCell>
@@ -306,7 +305,7 @@
                                         </ViewCell>
                                     </DataTemplate>
                                 </ListView.ItemTemplate>
-                            </ListView>
+                            </controls:NestedListView>
                         </Grid>
                     </ScrollView>
                 <BoxView HeightRequest="0.75" BackgroundColor="Gray" Opacity="0.75" Margin="6,0,6,2"/>
@@ -326,12 +325,12 @@
                         <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnReplyLabelTapped}" />
                     </Label.GestureRecognizers>
                 </Label>
-                <Image Source="calendar_blue_sm.png" HorizontalOptions="End" Margin="16,0,0,0" >
+                <Image Source="calendar_blue_sm.png" WidthRequest="16" HeightRequest="16" HorizontalOptions="End" Margin="16,0,0,0" >
                      <Image.GestureRecognizers>
                         <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnReplyEventTapped}" />
                     </Image.GestureRecognizers>
                 </Image>
-                <Image Source="wrench_blue.png" HorizontalOptions="End" Margin="16,0,8,0">
+                <Image Source="wrench_blue.png" WidthRequest="16" HeightRequest="16" HorizontalOptions="End" Margin="16,0,8,0">
                     <Image.GestureRecognizers>
                         <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnReplyWorkOrderTapped}" />
                     </Image.GestureRecognizers>
@@ -419,13 +418,13 @@
                 <Label Text="Loading File..." TextColor="White"/>
             </StackLayout>
         </Frame>
-    
+        <!-- IsVisible="{Binding ShouldShowClock}" -->
         <Grid x:Name="ClockPopupBackground" 
               IsVisible="{Binding ShouldShowClock}"
               RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent, Property=Width,Factor=1}"
               RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent, Property=Height,Factor=1}"
               BackgroundColor="#7D000000">
-            <Image Source="close_white.png" InputTransparent="true" Margin="0,25,15,0" HorizontalOptions="EndAndExpand" VerticalOptions="StartAndExpand"/>
+            <Image Source="close_white.png" WidthRequest="45" HeightRequest="45" InputTransparent="true" Margin="0,25,15,0" HorizontalOptions="EndAndExpand" VerticalOptions="StartAndExpand"/>
 
             <Frame HasShadow="false" InputTransparent="false" Margin="16,0,16,0" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
                 <StackLayout>
@@ -443,7 +442,7 @@
                             </Image.GestureRecognizers>
                         </Image>
                     </Grid>
-                    <local:ClockPicker Time="{Binding PickedTime,Mode=TwoWay}"/>
+                   <local:ClockPicker Time="{Binding PickedTime,Mode=TwoWay}"/>
                     <Button Command="{Binding OnSetTimeFromPickerTapped}" HorizontalOptions="FillAndExpand" Text="Set time" FontSize="Large" TextColor="White" BorderRadius="8" BackgroundColor="#51c623" />
                 </StackLayout>
                  <Frame.GestureRecognizers>
