* Camera2BasicSurfaceTextureListener.cs: FIXED CAMERA FOR NEXUS 5.   OK on others.
* App.xaml.cs:
* CamRecorder.cs:
* ManageGo.Android.csproj:
* LocalPermissionsHelper.cs:
* MaintenanceTicketsPage.xaml:
* MaintenanceTicketsPage.xaml.cs:
* AndroidManifest.xml:

--- a/ManageGo/Views/MaintenanceTicketsPage.xaml
+++ b/ManageGo/Views/MaintenanceTicketsPage.xaml
@@ -124,6 +124,7 @@
         </Frame>
     </Grid>
         <Image Source="plus_1_1.png" 
+               x:Name="AddNewTicketButton"
                IsVisible="{Binding AddNewButtonIsVisisble}"
                RelativeLayout.XConstraint="{ConstraintExpression Type=RelativeToParent,
                              Property=Width, Factor=1, Constant=-90}" 
