--- a/ManageGo/Views/TakeVideoPage.xaml
+++ b/ManageGo/Views/TakeVideoPage.xaml
@@ -38,6 +38,11 @@
             </Grid>
             <ContentView Grid.Row="1" Content="{Binding CameraPreviewContent}" HorizontalOptions="FillAndExpand" 
                                  VerticalOptions="FillAndExpand" BackgroundColor="Black" />
+            <Image Grid.Row="1" Source="rec_dot.png"
+                   x:Name="RecordIndicatorDot"
+                   VerticalOptions="StartAndExpand"
+                   HorizontalOptions="StartAndExpand"
+                   Margin="12,0,0,0" />
             <Image Grid.Row="1" VerticalOptions="EndAndExpand" 
                    HorizontalOptions="CenterAndExpand" 
                    Margin="0,0,0,28"
