* CustomEntry.cs: fixed ticket creations
* App.xaml:
* Unit.cs:
* Tenant.cs:
* Building.cs:
* APIpaths.cs:
* DataAccess.cs:
* ManageGo.iOS.csproj:
* chevron.png:
* clip_iso.png:
* CreateTicketPage.xaml:
* chevron@2x.png:
* chevron@3x.png:
* TicketDetailsPage.xaml:
* clip_iso@3x.png:
* clip_iso@2x.png:
* Welcomepagemodel.cs:
* CreateTicketPage.xaml.cs:
* ManageGo.Android.csproj:
* EditTicketDetailsView.xaml:
* TakeVideoPageModel.cs:
* MaintenanceTicketsPage.xaml:
* TicketFilterSelectView.xaml:
* clip.png:
* CreateTicketPageModel.cs:
* styles.xml:
* MaintenanceTicketsPage.xaml.cs:
* TicketDetailsPageModel.cs:
* capture_video_play_2.png:
* Resource.designer.cs:
* capture_video_stop_2.png:
* chevron.png:
* clip_iso.png:
* camera_3.png:
* camera_2.png:
* camera_1.png:
* clip.png:
* MaintenanceTicketsPageModel.cs:
* clip.png:
* capture_video_stop_2@2x.png:
* capture_video_stop_2@3x.png:
* capture_video_play_2@2x.png:
* capture_video_play_2@3x.png:
* clip.png:
* chevron.png:
* clip.png:
* chevron.png:
* clip_iso.png:
* camera_3.png:
* camera_2.png:
* camera_1.png:
* camera_2.png:
* camera_1.png:
* camera_3.png:
* clip_iso.png:
* chevron.png:
* camera_2.png:
* clip_iso.png:
* camera_1.png:
* camera_3.png:
* chevron.png:
* clip_iso.png:
* camera_3.png:
* camera_2.png:
* camera_1.png:
* capture_video_play_2.png:
* capture_video_stop_2.png:
* capture_video_stop_2.png:
* capture_video_play_2.png:
* capture_video_stop_2.png:
* capture_video_play_2.png:
* capture_video_stop_2.png:
* capture_video_play_2.png:
* capture_video_play_2.png:
* capture_video_stop_2.png:
* capture_video_stop_2.png:
* capture_video_play_2.png:

--- a/ManageGo/App.xaml
+++ b/ManageGo/App.xaml
@@ -8,6 +8,7 @@
             <Color x:Key="Tertiary">#FFFFFF</Color>
             <Color x:Key="Grey-Mid-1">#58595B</Color>
             <Color x:Key="Grey-Light-1">#A7A9AC</Color>
+            <Color x:Key="Grey-Light-2">#f4f4f4</Color>
             <Color x:Key="Grey-Mid-2">#949494</Color>
             <Color x:Key="Grey-Dark-1">#323232</Color>
             <Color x:Key="Off-White">#F9FAFB</Color>
@@ -15,7 +16,6 @@
             <Color x:Key="Green">#55C433</Color>
             <Color x:Key="Red">#E13D40</Color>
             <Style x:Key="Regular-Text" TargetType="Label">
-                
             </Style>
             <OnPlatform x:TypeArguments="x:String" x:Key="MonoBoldFont">
                 <On Platform="Android" Value="CourierPSStd-Bold.ttf#CourierPSMTStd-Bold" />
