--- a/ManageGo/Views/EditTicketDetailsView.xaml
+++ b/ManageGo/Views/EditTicketDetailsView.xaml
@@ -6,7 +6,7 @@
     <ContentView.Content>
         <ScrollView VerticalOptions="FillAndExpand">
             <StackLayout Spacing="0">
-                <Grid Padding="21,17,21,17" RowSpacing="12">
+                <Grid Padding="21,17,21,8" RowSpacing="12">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="*" />
@@ -27,8 +27,7 @@
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="auto" />
-                        <RowDefinition Height="auto" />
-                         <RowDefinition Height="auto" />
+                        
                     </Grid.RowDefinitions>
                     <Label Text="Tenant" FontSize="Small" Grid.Column="0" Grid.Row="0" TextColor="{StaticResource Key=Grey-Light-1}"/>
                     <BoxView Grid.Row="1" HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
@@ -45,8 +44,9 @@
                     <Label Text="Due date" FontSize="Small" Grid.Column="0" Grid.Row="12" TextColor="{StaticResource Key=Grey-Light-1}"/>
                     <BoxView Grid.Row="13" HeightRequest="1" VerticalOptions="Center" BackgroundColor="#e0e0e0" Grid.ColumnSpan="2" />
                     <Label Text="Status" FontSize="Small" Grid.Column="0" Grid.Row="14" TextColor="{StaticResource Key=Grey-Light-1}"/>
-                    <StackLayout Grid.Column="1" Grid.Row="12">
+                    <StackLayout Grid.ColumnSpan="2" Grid.Row="12">
                         <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand">
+                            <Label Text="DueDate  " FontSize="Small"  TextColor="Transparent"/>
                             <Label Text="{Binding DueDate}" FontSize="Small"  TextColor="{StaticResource Key=Grey-Mid-1}"/>
                             <Image Source="{Binding DueDateRowIcon}" HorizontalOptions="EndAndExpand"/>
                              <StackLayout.GestureRecognizers>
@@ -91,6 +91,7 @@
                             </StackLayout>
                         </StackLayout>
                     </StackLayout>
+                    <!-- Categories -->
                     <StackLayout Grid.Column="1" Grid.Row="6">
                         <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand">
                             <Label Text="{Binding CategoryLabelText}" LineBreakMode="TailTruncation" FontSize="Small"  TextColor="{Binding CategoryLabelColor}"/>
@@ -99,7 +100,6 @@
                                     <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnShowCategoryOptionsTapped}" />
                                 </StackLayout.GestureRecognizers>
                         </StackLayout>
-                        <!-- Categories -->
                         <StackLayout IsVisible="{Binding CategoryOptionsVisible}">
                             <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
                             <controls:NestedListView  ItemsSource="{Binding Categories}" VerticalOptions="Start" SeparatorVisibility="None" SelectionMode="None" HeightRequest="125" >
@@ -138,7 +138,7 @@
                                                 <Image Source="{Binding CheckBoxImage}" />
                                                 <Label Text="{Binding TagName}" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
                                                 <StackLayout.GestureRecognizers>
-                                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.OnCategoryTapped, Source={x:Reference ThisView}}" CommandParameter="{Binding .}" />
+                                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.OnTagTapped, Source={x:Reference ThisView}}" CommandParameter="{Binding .}" />
                                                 </StackLayout.GestureRecognizers>
                                             </StackLayout>
                                         </ViewCell>
@@ -147,18 +147,40 @@
                             </controls:NestedListView>
                         </StackLayout>
                     </StackLayout>
-                   <Grid Grid.Row="15" Grid.ColumnSpan="2" Margin="0,12,0,0" Padding="0">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="auto" />
-                        </Grid.RowDefinitions>
-                        <Button Command="{Binding OnSaveEditsTapped}" BackgroundColor="{StaticResource Green}" Padding="0" Text="Save Changes" HorizontalOptions="FillAndExpand" Grid.Column="0" Grid.Row="0" VerticalOptions="FillAndExpand" TextColor="White" FontAttributes="Bold" />
-                        <!-- <Button Command="{Binding OnHideDetailsTapped}" BackgroundColor="{StaticResource Grey-Light-1}" Padding="0" Text="View Ticket" HorizontalOptions="FillAndExpand" Grid.Column="1" VerticalOptions="FillAndExpand" Grid.Row="0" TextColor="White" FontAttributes="Bold" /> -->
-                        <Button Command="{Binding OnCloseTicketButtonTapped}" BackgroundColor="Transparent" Padding="0" Text="Close Ticket" HorizontalOptions="FillAndExpand" Grid.Column="2" VerticalOptions="FillAndExpand" Grid.Row="0" TextColor="Red" />
-                    </Grid> 
+                    
+                    
+                    <!-- Assigned Users -->
+                     <StackLayout Grid.Column="1" Grid.Row="10">
+                        <StackLayout Orientation="Horizontal" VerticalOptions="CenterAndExpand">
+                            <Label Text="{Binding AssignedLabelText}" LineBreakMode="TailTruncation" FontSize="Small"  TextColor="{StaticResource Key=Grey-Mid-1}"/>
+                            <Image Source="{Binding AssignedOptionsRowIcon}" HorizontalOptions="EndAndExpand"/>
+                            <StackLayout.GestureRecognizers>
+                                <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding OnShowAssignedOptionsTapped}" />
+                            </StackLayout.GestureRecognizers>
+                        </StackLayout>
+                        <StackLayout IsVisible="{Binding AssignedOptionsVisible}">
+                            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-1}" />
+                            <controls:NestedListView  ItemsSource="{Binding Users}" VerticalOptions="Start" SeparatorVisibility="None" SelectionMode="None" HeightRequest="125" >
+                                 <ListView.ItemTemplate>
+                                    <DataTemplate>
+                                        <ViewCell>
+                                            <StackLayout Orientation="Horizontal" VerticalOptions="FillAndExpand" Padding="0,12,0,0">
+                                                <Image Source="{Binding CheckBoxImage}" />
+                                                <Label Text="{Binding UserFullName}" VerticalOptions="CenterAndExpand" LineBreakMode="TailTruncation" FontSize="Small" />
+                                                <StackLayout.GestureRecognizers>
+                                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.OnUserTapped, Source={x:Reference ThisView}}" CommandParameter="{Binding .}" />
+                                                </StackLayout.GestureRecognizers>
+                                            </StackLayout>
+                                        </ViewCell>
+                                    </DataTemplate>
+                                </ListView.ItemTemplate>
+                            </controls:NestedListView>
+                        </StackLayout>
+                    </StackLayout>
+                    
+                    
                 </Grid>
-                <BoxView HeightRequest="1" BackgroundColor="#e0e0e0" HorizontalOptions="FillAndExpand" />
-                <BoxView HeightRequest="2" BackgroundColor="Silver" HorizontalOptions="FillAndExpand" />
-
+                
             </StackLayout>
         </ScrollView>
     </ContentView.Content>
