--- a/ManageGo/Views/MaintenanceTicketsPage.xaml
+++ b/ManageGo/Views/MaintenanceTicketsPage.xaml
@@ -32,7 +32,7 @@
             <Image Source="logo.png" Margin="-42,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
         </StackLayout>
         <StackLayout Spacing="0" Grid.Row="1">
-            <Label  Text="Tickets" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Small" HorizontalTextAlignment="Center"/>
+            <Label  Text="Tickets" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
              <BoxView HeightRequest="1" BackgroundColor="#85bafa"/>
             <Grid VerticalOptions="FillAndExpand" MinimumHeightRequest="50" HeightRequest="50">
                 <Grid.RowDefinitions>
@@ -75,7 +75,7 @@
                                              <RowDefinition Height="auto" />
                                         </Grid.RowDefinitions>
                                         <Image HorizontalOptions="CenterAndExpand" Grid.Row="0" Source="{Binding CommentImage}" />
-                                        <Label Text="{Binding NumberOfRepliesString}" FontSize="Micro" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" Grid.Row="0" TextColor="White"  />
+                                        <Label Text="{Binding NumberOfRepliesString}" FontSize="Micro" VerticalOptions="CenterAndExpand" Margin="0,0,0,4" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" Grid.Row="0" TextColor="White"  />
                                         <Image HorizontalOptions="CenterAndExpand" IsVisible="{Binding HasAccess}" Grid.Row="1" Source="key_blue.png" />
                                         <Image HorizontalOptions="CenterAndExpand" IsVisible="{Binding HasEvent}" Grid.Row="2" Source="calendar_blue_sm.png" />
                                         <Image HorizontalOptions="CenterAndExpand" IsVisible="{Binding HasWorkorder}" Grid.Row="3" Source="wrench_blue.png" />
@@ -123,6 +123,7 @@
             </StackLayout>
         </Frame>
     </Grid>
+        <!-- button for creating new ticket -->
         <Image Source="plus_1_1.png" 
                x:Name="AddNewTicketButton"
                IsVisible="{Binding AddNewButtonIsVisisble}"
